# bm25-jieba

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: demo.py
src/: lib.rs
tests/: benchmark.py  test_bm25.py  test_ids.py  validate.py
