[project]
name = "bm25-jieba"
version = "0.1.0"
description = "BM25 中文文本搜索算法 (Rust 实现)"
readme = "README.md"
authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
requires-python = ">=3.12"

[build-system]
requires = ["maturin>=1.11,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bm25_jieba"

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "pytest>=8.0",
    "ruff>=0.14.14",
]
validation = [
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
]
