[project]
name = "bm25-jieba"
version = "0.2.0"
description = "High-performance BM25 Chinese text search with jieba-rs tokenizer (Rust implementation)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
requires-python = ">=3.11"
keywords = [
    "bm25",
    "chinese",
    "search",
    "nlp",
    "text-search",
    "jieba",
    "information-retrieval",
    "rust",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/twn39/bm25-jieba"
Repository = "https://github.com/twn39/bm25-jieba"
Issues = "https://github.com/twn39/bm25-jieba/issues"

[build-system]
requires = ["maturin>=1.11,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bm25_jieba"

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "pytest>=8.0",
    "ruff>=0.14.14",
]
validation = [
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
]
